* New parameter in vets() - initialisation, which is the same as initial in all the other functions (e.g. from smooth).
* ves() and vets() now supports backcasting for initialisation.
* Backasting is now the default initialisation in both ves() and vets().

Bugfixes:
* discounter() in C++ would sometimes return wrong large values. We now do scaling of the discount matrix first to help it get to better solution fast.


legion v0.2.1 (Release data: 2025-02-03)
=======

Changes:
* We now use Matrix package for sparse matrix computations. Very useful for data with lots of series.
* We now calculate eigen values inside the C++ using the eigens_gen() function from the Armadillo library. This works faster but might produce less accurate estimates of parameters (need to experiment).

Bugfixes:
* Corrected the author details in the documentation.
* A fix in the stability checks for the admissible bounds for vets and ves.
* Correct number of degrees of freedom for vets/ves prediction intervals.
* Correct email address.


legion v0.2.0 (Release data: 2023-09-15)
=======

Changes:
* Starting from v0.2.0, the legion package for R will be released under the LGPLv2.1 license. The source of the older version of the software under the GPL(>=2) is available here: https://github.com/config-i1/legion/releases/tag/v0.1.3.


legion v0.1.3 (Release data: 2023-08-28)
=======

Changes:
* References to the accepted papers on VETS.


legion v0.1.2 (Release data: 2023-01-30)
=======

Changes:
* The order in which in plot.legion() now matters.
* Allow estimating seasonal vets() on the short data (one season of data).
* auto.vets() now does not check for common initial level and common level component. This is not practical.

Bugfixes:
* Fixed a bug in dimnames for some vets() models.
* ves() and vets() would produce an error in case of h=1 due to drop of one of the dimensions by R, when extracting the holdout.
* Fix in auto.vets() for level models with no checks for initials and components.