@@ -1,7 +1,7 @@
 Package: legion
 Type: Package
 Title: Forecasting Using Multivariate Models
-Version: 0.2.2.41002
+Version: 0.2.2.41003
 Date: 2025-10-24
 Authors@R: c(person("Ivan", "Svetunkov", email = "ivan@svetunkov.com", role = c("aut", "cre"),
                   comment="Senior Lecturer, Centre for Marketing Analytics and Forecasting, Lancaster University, UK"),
